; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_inode.c_inode_add_lru.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_inode.c_inode_add_lru.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@I_DIRTY_ALL = common dso_local global i32 0, align 4
@I_SYNC = common dso_local global i32 0, align 4
@I_FREEING = common dso_local global i32 0, align 4
@I_WILL_FREE = common dso_local global i32 0, align 4
@SB_ACTIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inode_add_lru(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %3 = load %struct.inode*, %struct.inode** %2, align 8
  %4 = getelementptr inbounds %struct.inode, %struct.inode* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @I_DIRTY_ALL, align 4
  %7 = load i32, i32* @I_SYNC, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @I_FREEING, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @I_WILL_FREE, align 4
  %12 = or i32 %10, %11
  %13 = and i32 %5, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %32, label %15

15:                                               ; preds = %1
  %16 = load %struct.inode*, %struct.inode** %2, align 8
  %17 = getelementptr inbounds %struct.inode, %struct.inode* %16, i32 0, i32 2
  %18 = call i32 @atomic_read(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %32, label %20

20:                                               ; preds = %15
  %21 = load %struct.inode*, %struct.inode** %2, align 8
  %22 = getelementptr inbounds %struct.inode, %struct.inode* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @SB_ACTIVE, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %20
  %30 = load %struct.inode*, %struct.inode** %2, align 8
  %31 = call i32 @inode_lru_list_add(%struct.inode* %30)
  br label %32

32:                                               ; preds = %29, %20, %15, %1
  ret void
}

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @inode_lru_list_add(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
